# modelling_in_jax

./: .pre-commit-config.yaml  README.md  pyproject.toml
sensible/layers/: attention.py  embedding.py  linear.py  norm.py  utils.py
shell/: format.sh
